--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,10 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./header.css');
+@import url('../../node_modules/flatpickr/dist/flatpickr.min.css');
+@import url('../../node_modules/izitoast/dist/css/iziToast.min.css');
+@import url('./1-timer.css');
+@import url('./2-snackbar.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
