--- a/src/css/2-snackbar.css
+++ b/src/css/2-snackbar.css
@@ -66,7 +66,7 @@
   
   input[type='radio']:checked {
     border: 1px solid #4e75ff;
-    background-image: url('../public/rectangle.png');
+    background-image: url('../img/rectangle.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 12px 12px;
